umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_templates.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 32, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidBondLine
    message: "Invalid bond line at line 32, col 0"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C16
    atom_count: 16
    bond_count: 18
    extended_atoms: 0
    extended_bonds: 1
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C16
    atom_count: 16
    bond_count: 18
    extended_atoms: 0
    extended_bonds: 1
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
